# python-whatsapp-bot

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .npmrc  API_QUERIES_WITHOUT_TANSTACK_QUERY.md  DOCUMENTS_PERFORMANCE_ACTION_PLAN.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nextjs  KNIP_AUDIT.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  Procfile  README.md  TLDRAW_CANVAS_IMPLEMENTATION.md  TLDRAW_VIEWER_IMPLEMENTATION.md  UI-ONLY-MODE.md  bash.exe.stackdump  biome-warnings.md  biome.json  biome.out  damn, new components.txt  deploy.sh  docker-compose.nextjs.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example.env  issues.md  knip.json  migrate_db.sql  names.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  (+17 more)
.cursor/commands/: commit.md  fix_frontend.md  fix_mypy.md  fix_ruff.md  fix_ultracite.md  log_operation.md  refactor.md  tokei.md
.cursor/examples/: DDD_article.txt  DDD_repo.md  tanstack_query_websockets_1.txt  tanstack_query_websockets_2.txt
.cursor/rules/: frontend_structure.mdc  general_python_FastAPI_rules.mdc  nextjs_rules.mdc  ultracite.mdc
.github/workflows/: deploy.yml  docker-deploy.yml
.husky/: pre-commit
.streamlit/: config.toml
app/: __init__.py  config.py  database.py  db.py  hardcoded_data.py  i18n.py  metrics.py  scheduler.py  streamlit_app.py  views.py
app/auth/: deps.py  models.py  router.py  schemas.py
app/db_migrations/: text_search.py
app/decorators/: __init__.py  metrics_decorators.py  safety.py  security.py
app/domain/: base.py  interfaces.py  reservation.py
app/frontend/: .dockerignore  .env.local  .eslintrc.cjs  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  __init__.py  biome.json  biome.jsonc  calendar_view.py  components.json  conversation_view.py  dashboard.py  data_view.py  index.html  knip.json  middleware.ts  next-i18next.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  remove-logs.js  setupTests.ts  sidebar.py  statistics_view.py  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  whatsapp_client.py
app/infrastructure/: __init__.py  logging.py
app/scripts/: __init__.py  run_database_backup.py
app/services/: anthropic_service.py  assistant_functions.py  assistant_functions_backup.py  gemini_service.py  inbound_queue.py  llm_service.py  openai_service.py  system_agent_functions.py  system_tool_schemas.py  tool_schemas.py  websocket_manager.py
app/tests/: manual_test_phone_contacts.py  test_phone_contacts.py  test_phone_contacts_http.py  test_phone_search.py  test_system_agent_batch.py
app/utils/: __init__.py  http_client.py  logging_utils.py  messenger_utils.py  realtime.py  service_utils.py  whatsapp_utils.py
attempt/: index.html
attempt-nextjs/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
attempt-nextjs/app/: fullcalendar.css  globals.css  layout.tsx  page.tsx
attempt-nextjs/components/: UndoManager.tsx  animated-sidebar-trigger.tsx  app-sidebar.tsx  calendar-container.tsx  calendar-core.tsx  calendar-data-table-editor-wrapper.tsx  calendar-event-context-menu.tsx  calendar-hover-card-portal.tsx  calendar-legend.tsx  calendar-main-content.tsx  calendar-skeleton.tsx  chat-sidebar-content.tsx  chat-sidebar.tsx  conversation-combobox.tsx  customer-stats-card.tsx  dashboard-skeleton.tsx  dashboard-view.tsx  data-table-editor-content.tsx  data-table-editor-loading.tsx  data-table-editor-refactored.tsx  data-table-editor.tsx  dock-nav-simple.tsx  dock-nav.tsx  dual-calendar.tsx  enhanced-column-menu.tsx  error-boundary.tsx  error-recovery-init.tsx  fullcalendar.tsx  global-settings.tsx  index.ts  main-content-wrapper.tsx  notifications-button.tsx  performance-optimizations.tsx  prayer-times-widget.tsx  simple-calendar.tsx  table-skeleton.tsx  theme-wrapper.tsx  top-nav.tsx  top-toolbar.tsx  vacation-periods.tsx
attempt-nextjs/hooks/: use-dock-navigation.ts  useCalendarCore.ts  useCalendarEventHandlers.ts  useCalendarEvents.ts  useCalendarHoverCard.ts  useCalendarInitialization.ts  useCalendarState.ts  useCalendarToolbar.ts  useDataTableSaveHandler.ts  useDataTableValidation.ts  useVacationDateChecker.ts
attempt-nextjs/styles/: component-overrides.css  fonts.css  glide-grid.css  imports.css  markdown.css  phone-input.css  portal.css  sidebar.css  table-skeleton.css  tempus-dominus.css  theme-inline.css  theme-neo-brutalism.css  theme-starry-night.css  utilities.css
attempt-nextjs/types/: calendar.ts  dashboard.ts  hijri-date.d.ts
config/: turso.env.example
docs/: analysis-calendar-datagrid-modification-flow-2025-01-18.md  analysis-calendar-datagrid-modification-flow-PART2.md  analysis-calendar-datagrid-modification-flow-PART3-FINAL.md  analysis-calendar-event-sorting-2025-10-18.md  backend-refactor.md  backend-typescript-refactor.md  config-gap-status.md  config-page-refactor.md  database-schema.md  default-document-drawer-refactor.md  documents-excalidraw-refactor.md  file-analysis.md  navigation-prefetch-refactor.md  phone-combobox-refactor.md  system-calendar-ai-refactor.md  tokei_output.txt  use-data-table-save-handler-refactor.md  useCalendarEvents-qa-checklist.md  useCalendarEvents-refactor.md  useDocumentsSection-refactor.md
old_streamlit_frontend/: __init__.py  calendar_view.py  conversation_view.py  dashboard.py  data_view.py  statistics_view.py
prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: build_postgres_image.sh  configure_s3_backup_lifecycle.sh  deploy.sh  find_i18n_violations.py  lint.py  local-dev.sh  migrate_original_to_new.py  migrate_sqlite_to_postgresql.py  pg_backup.sh  pg_backup_s3_extension.sh  postgresql_backup.sh  restore_db_from_s3.sh  run_database_backup.sh  seed_reservations_and_messages.sql  sqlite_backup.sh  sqlite_to_postgres.py  sync_prod_db_to_local.sh  vector_search.py
start/: whatsapp_quickstart.py
supabase/: config.toml
tests/: README.md  README_TESTING.md  run_tests.py  test_reminder_system.py
(+2310 files in other folders)
