[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "python-whatsapp-bot"
version = "0.1.0"
description = "WhatsApp bot backend services"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  # Shared
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "hijri-converter>=2.3.1",
  "python-dateutil==2.8.2",
  "ruff>=0.12.10",
  "types-psutil>=7.0.0.20250822",
]

[project.optional-dependencies]
# Backend-only dependencies
backend = [
  "fastapi>=0.104.1",
  "uvicorn>=0.23.2",
  "httpx>=0.25.0",
  "pydantic>=2.4.2",
  "prometheus-client>=0.17.1",
  "psutil>=5.9.6",
  "APScheduler>=3.10.4",
  "python-multipart>=0.0.6",
  "SQLAlchemy>=2.0.23",
  "anthropic>=0.8.0",
  "orjson>=3.9.0",
  "openai==1.76.0",
  "aiohttp==3.11.12",
  "google-genai==1.10.0",
  "google-api-core>=2.18.0",
  "phonenumbers==8.13.55",
  "tenacity==9.0.0",
  # Avoid installation on Windows
  "uvloop>=0.19.0; sys_platform != 'win32'",
  # Auth
  "fastapi-users[sqlalchemy]>=12.1.3",
  "aiosqlite>=0.20.0",
  "passlib[bcrypt]>=1.7.4",
]

[tool.uv]
managed = true
python-preference = "system"
cache-keys = ["platform", "implementation", "version"]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "pytest>=8.4.1",
  "pip-licenses>=4.5.0",
  "mypy>=1.10.0",
  "pydantic>=2.4.2",
]
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_optional = false
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
local_partial_types = true
extra_checks = true
show_error_codes = true
pretty = true
color_output = true
exclude = [
  "^app/frontend/",
  "^node_modules/",
  "^tests/e2e/",
]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true



